# ttp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pylintrc  pyproject.toml  readthedocs.yaml  requirements-dev.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: main.yml
.pytest_cache/v/cache/: nodeids
docs/: requirements.txt
docs/source/: API reference.rst  CLI tool.rst  FAQ.rst  Installation.rst  Overview.rst  Performance.rst  Quick start.rst  TTP Templates Collection.rst  Writing templates.rst  conf.py  index.rst  spelling_wordlist.txt
docs/source/Doc Tag/: Doc Tag.rst
docs/source/Extend Tag/: Extend Tag.rst
docs/source/Forming Results Structure/: Absolute path.rst  Anonymous group.rst  Dynamic Path.rst  Dynamic path with path formatters.rst  Expanding Match Variables.rst  Group Name Attribute.rst  Null path name attribute.rst  Path formatters.rst  TTP object results structure.rst  index.rst
docs/source/Groups/: Attributes.rst  Functions.rst  Name Attribute.rst  index.rst
docs/source/Inputs/: Attributes.rst  Functions.rst  Parameters.rst  Sources.rst  index.rst
docs/source/Lookup Tables/: Lookup Tables.rst
docs/source/Macro Tag/: Macro Tag.rst
docs/source/Match Variables/: Functions.rst  Indicators.rst  Patterns.rst  index.rst
docs/source/Outputs/: Attributes.rst  Formatters.rst  Functions.rst  Returners.rst  index.rst
docs/source/Results Structure/: Absolute path.rst  Null path name attribute.rst  Template results mode.rst  index.rst
docs/source/TTP Internals/: index.rst
docs/source/TTP_TAGS/: Inputs.rst  Lookups.rst  Macro.rst  Template.rst  Variables.rst  index.rst
docs/source/TTP_TAGS/Inputs/: Attributes.rst  Functions.rst  Parameters.rst  index.rst
docs/source/TTP_TAGS/Outputs/: Attributes.rst  Formatters.rst  Functions.rst
docs/source/Template Tag/: Template Tag.rst
docs/source/Template Variables/: Attributes.rst  Getters.rst  Template Variables.rst  index.rst
docs/source/Writing templates/: How to filter with TTP.rst  How to parse hierarchical (configuration) data.rst  How to parse show commands output.rst  How to parse text tables.rst  How to produce time series data with TTP.rst  index.rst
test/: myfile.txt  test_input_parameters.py  test_logging_from_module.py  test_structure.py  ttp_dns_test.txt  ttp_tests.txt
test/pytest/: .coverage  test_N2G_formatter.py  test_anonymous_group.py  test_anonymous_template.py  test_answers.py  test_answers_and_docs.py  test_coverage_formatters.py  test_coverage_group_functions.py  test_coverage_match_functions.py  test_coverage_misc.py  test_coverage_ttp_core.py  test_csv_formatter.py  test_empty_group_results.py  test_extend_tag.py  test_group_chain_attribute.py  test_group_functions.py  test_group_lookup.py  test_group_name_attribute.py  test_headers_indicator.py  test_inputs.py  test_line_indicator.py  test_lookups.py  test_match_condition_fun.py  test_match_functions.py  test_misc.py  test_netmiko_source.py  test_nornir_source.py  test_output_formatters.py  test_output_functions.py  test_output_returners.py  test_outputters.py  test_regexes.py  test_structure.py  test_syslog_returner.py  test_template_variables.py  test_tesults_clear.py  test_ttp_parser_methods.py
test/pytest/Output/: custom_returner_test.txt  excel_out_test_excel_formatter.xlsx  excel_out_test_excel_formatter_update.xlsx  out_test_file_returner.txt  out_test_file_returner_switch-sw1_group_specific_outputter.txt  out_test_file_returner_switch-sw2.txt  test_excel_formatter_file_returner_incomplete_url.xlsx  test_excel_formatter_no_results_at_path_strict_false.xlsx
test/pytest/assets/: excel_out_test_excel_formatter_update_source.xlsx  extend_groups_filter_test.txt  extend_groups_recursive_extend_load.txt  extend_groups_recursive_extend_load_several_top_groups.txt  extend_nested_template_with_default_input.txt  extend_nested_template_with_named_inputs.txt  extend_test_inputs_filter.txt  extend_test_lookups_filter.txt  extend_test_nested_group_filter.txt  extend_test_output_filter.txt  extend_test_vars_filter.txt  extend_vars_and_lookup_tag.txt  extend_vlan.txt  extend_vlan_anon.txt  extend_vlan_with_named_template_tag1.txt  extend_vlan_with_named_template_tag2.txt  extend_vlan_with_template_tag.txt  test_extend_tag_bgp_config.txt  test_extend_tag_within_group.txt  test_extend_tag_within_group_with_anonymous_group.txt  test_extend_tag_within_group_with_multiple_groups.txt  test_extend_tag_within_group_with_non_hierarch_template.txt  test_lookup_include_csv.csv  test_lookup_include_yaml.txt  yaml_vars.txt
test/pytest/mock_data/dataset_1/: data_1.txt  data_2.txt  (+1 more)
ttp/: __init__.py  ttp.py
ttp/formatters/: csv_formatter.py  excel_formatter.py  graph_formatter.py  jinja2_formatter.py  json_formatter.py  n2g_formatter.py  pprint_formatter.py  raw_formatter.py  table_formatter.py  tabulate_formatter.py  yaml_formatter.py
ttp/group/: contains.py  contains_val.py  containsall.py  delete.py  equal.py  exclude.py  exclude_val.py  excludeall.py  expand.py  itemize.py  items2dict.py  lookup.py  macro.py  record.py  set_.py  sformat.py  to_converters.py  to_ip.py  validate.py  validate_cerberus.py
ttp/input/: commands.py  hopper_fun.py  hopper_source.py  macro.py  netmiko_source.py  test.py
ttp/lookup/: geoip2.py
ttp/match/: copy_.py  count.py  dns_lookups.py  geoip_lookup.py  ip.py  item.py  joinmatches.py  let.py  line_number.py  lookup.py  mac_eui.py  macro.py  raise_.py  re_.py  record.py  set.py  set_.py  string.py  to.py  unrange.py  uptimeparse.py  void.py
ttp/output/: deepdiffer.py  is_equal.py  macro.py  transform.py  validate.py  validate_cerberus.py  validate_yangson.py
ttp/patterns/: get_pattern.py
ttp/returners/: file_returner.py  self_returner.py  syslog_returner.py  terminal_returner.py
ttp/sources/: hopper_source.py  netmiko_source.py  nornir_source.py
ttp/utils/: get_attributes.py  guess.py  load_python_exec.py  load_python_exec_py2.py  load_python_exec_py3.py  loaders.py  quick_parse.py
ttp/variable/: getfilename.py  gethostname.py  time_funcs.py
(+1 files in other folders)
