[tool.poetry]
name = "ttp"
version = "0.9.5"
description = "Template Text Parser"
authors = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
maintainers = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dmulyalin/ttp"
repository = "https://github.com/dmulyalin/ttp"
documentation = "https://ttp.readthedocs.io/"
keywords = ["Parsing", "TTP", "regex"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = ">=2.7,<4.0"

# optional dependencies for extras definition
cerberus = { version = "1.3.*", optional = true, markers = "python_version >= '3.7'" }
jinja2 = { version = "3.0.*", optional = true, markers = "python_version >= '3.7'" }
pyyaml = { version = "6.0", optional = true, markers = "python_version >= '3.7'" }
deepdiff = { version = "5.8.*", optional = true, markers = "python_version >= '3.7'" }
openpyxl = { version = "3.0.*", optional = true, markers = "python_version >= '3.7'" }
tabulate = { version = "0.8.*", optional = true, markers = "python_version >= '3.7'" }
ttp_templates = { version = "0.*", optional = true, markers = "python_version >= '3.7'" }
yangson = { version = "1.4.*", optional = true, markers = "python_version >= '3.7'" }
n2g = { version = "0.2.*", optional = true, markers = "python_version >= '3.7'" }

# docs dependencies for extras definition
readthedocs-sphinx-search = { version = "0.1.1", optional = true, markers = "python_version >= '3.7'" }
Sphinx = { version = "4.3.0", optional = true, markers = "python_version >= '3.7'" }
sphinx_rtd_theme = { version = "1.0.0", optional = true, markers = "python_version >= '3.7'" }
sphinxcontrib-applehelp = { version = "1.0.1", optional = true, markers = "python_version >= '3.7'" }
sphinxcontrib-devhelp = { version = "1.0.1", optional = true, markers = "python_version >= '3.7'" }
sphinxcontrib-htmlhelp = { version = "2.0.0", optional = true, markers = "python_version >= '3.7'" }
sphinxcontrib-jsmath = { version = "1.0.1", optional = true, markers = "python_version >= '3.7'" }
sphinxcontrib-napoleon = { version = "0.7", optional = true, markers = "python_version >= '3.7'" }
sphinxcontrib-qthelp = { version = "1.0.2", optional = true, markers = "python_version >= '3.7'" }
sphinxcontrib-serializinghtml = { version = "1.1.5", optional = true, markers = "python_version >= '3.7'" }
sphinxcontrib-spelling = { version = "7.2.1", optional = true, markers = "python_version >= '3.7'" }

[tool.poetry.dev-dependencies]
bandit = { version = "*", markers = "python_version >= '3.7'" }
black = { version = "*", markers = "python_version >= '3.7'" }
flake8 = { version = "*", markers = "python_version >= '3.7'" }
pre-commit = { version = "*", markers = "python_version >= '3.7'" }
pyenchant = { version = "*", markers = "python_version >= '3.7'" }
pylint = { version = "*", markers = "python_version >= '3.7'" }
pytest = { version = ">=7.1", markers = "python_version >= '3.7'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ttp = 'ttp.ttp:cli_tool'

[tool.poetry.extras]
full = [
    "cerberus",
    "jinja2",
    "pyyaml",
    "deepdiff",
    "openpyxl",
    "tabulate",
    "ttp_templates",
    "yangson",
    "n2g",
]
docs = [
    "readthedocs-sphinx-search",
    "Sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-serializinghtml",
    "sphinxcontrib-spelling",
]
